--- a/OctagonPlatform/OctagonPlatform.csproj
+++ b/OctagonPlatform/OctagonPlatform.csproj
@@ -449,6 +449,7 @@
     <Content Include="App_Readme\Elmah.txt" />
     <Content Include="Content\adminsb\.gitignore" />
     <Content Include="Content\adminsb\data\flot-data.js" />
+    <Content Include="obj\Release\Package\PackageTmp\Octagon\assets\img\banner2-1.jpg" />
     <Content Include="Octagon\assets\data\vendbot-data.js" />
     <Content Include="Octagon\assets\data\CashEverywhere-data.js" />
     <Content Include="Octagon\assets\data\demmoney-data.js" />
@@ -839,15 +840,10 @@
     <Content Include="Octagon\assets\img\404.jpg" />
     <Content Include="Octagon\assets\img\banner-octa.jpg" />
     <Content Include="Octagon\assets\img\banner2-1.jpg" />
-    <Content Include="Octagon\assets\img\banner2.jpg" />
     <Content Include="Octagon\assets\img\carousel1.jpg" />
-    <Content Include="Octagon\assets\img\eth-16x16.png" />
-    <Content Include="Octagon\assets\img\eth-32x32.png" />
     <Content Include="Octagon\assets\img\favicon-32x32.png" />
     <Content Include="Octagon\assets\img\logo.jpg" />
     <Content Include="Octagon\assets\img\logo.png" />
-    <Content Include="Octagon\assets\img\ltc-16x16.png" />
-    <Content Include="Octagon\assets\img\ltc-32x32.png" />
     <Content Include="Octagon\assets\js\Contact-FormModal-Contact-Form-with-Google-Map.js" />
     <Content Include="Octagon\assets\js\inputmask.js" />
     <Content Include="Octagon\assets\js\jquery.min.js" />
