--- a/OctagonPlatform/OctagonPlatform.csproj
+++ b/OctagonPlatform/OctagonPlatform.csproj
@@ -230,6 +230,7 @@
     <Compile Include="Controllers\PartnersController.cs" />
     <Compile Include="Controllers\PermissionsController.cs" />
     <Compile Include="Controllers\PopulateController.cs" />
+    <Compile Include="Controllers\Reports\CashBalanceatCloseController.cs" />
     <Compile Include="Controllers\Reports\MonthlyTransactionSummaryController.cs" />
     <Compile Include="Controllers\Reports\DailyTransactionSummaryController.cs" />
     <Compile Include="Controllers\Reports\TerminalStatusController.cs" />
