fix error in generateKy to user password

--- a/OctagonPlatform/OctagonPlatform.csproj
+++ b/OctagonPlatform/OctagonPlatform.csproj
@@ -1051,7 +1051,7 @@
     <Content Include="Content\quicksearch\package.json" />
     <Content Include="Content\quicksearch\README.md" />
     <Content Include="ClassDiagram1.cd" />
-    <Content Include="Views\Terminals\Sections\ErrorAccess.cshtml" />
+    <Content Include="Views\Shared\ErrorWithLayout.cshtml" />
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
