cambios  en program

--- a/ReportExecuter/App.config
+++ b/ReportExecuter/App.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
@@ -17,9 +17,9 @@
   <connectionStrings>
     <!--Cada vez que se haga un update database hacerlo tambien para mi data base local-->
     <!-- <add name="LocalConection" connectionString="Server=tcp:xyncro.database.windows.net,1433;Initial Catalog=octagonNewTest;Persist Security Info=False;User ID=xyncroadminsa;Password=xyncro2017!@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;
-         Connection Timeout=30; " providerName="System.Data.SqlClient" />
-    <add name="LocalConection" connectionString="Data Source=DESKTOP-3VCQ05F\SQLEXPRESS;Initial Catalog=octagon;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />-->
-    <add name="LocalConection" connectionString="Data Source=CASAPC\SQLEXPRESS;Initial Catalog=octagon;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
+         Connection Timeout=30; " providerName="System.Data.SqlClient" />-->
+    <add name="LocalConection" connectionString="Data Source=DESKTOP-3VCQ05F\SQLEXPRESS;Initial Catalog=octagon;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
+    <!-- <add name="LocalConection" connectionString="Data Source=CASAPC\SQLEXPRESS;Initial Catalog=octagon;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />-->
 
     <!-- <add name="LocalConection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=Octagon4;Integrated Security=True" providerName="System.Data.SqlClient" />-->
     <!--<add name="LocalConection" connectionString="Data Source=DESKTOP-I1KBFAR\SQLEXPRESS;Initial Catalog=octagon10;Integrated Security=True"
