--- a/OctagonPlatform/Web.config
+++ b/OctagonPlatform/Web.config
@@ -164,6 +164,8 @@
   <location path="elmah.axd" inheritInChildApplications="false">
 
     <system.web>
+      <globalization culture="en-US" uiCulture="en-US" />
+      <!-- this only -->
       <httpHandlers>
         <add verb="POST,GET,HEAD" path="elmah.axd" type="Elmah.ErrorLogPageFactory, Elmah"/>
       </httpHandlers>
